--- a/frontend/angularSPA/package.json
+++ b/frontend/angularSPA/package.json
@@ -34,6 +34,7 @@
     "nativescript-angular": "~7.0.0",
     "nativescript-theme-core": "~1.0.4",
     "nebular-icons": "^1.1.0",
+    "net": "^1.0.2",
     "reflect-metadata": "~0.1.8",
     "rxjs": "^6.2.0",
     "tns-core-modules": "~5.0.0",
